---------------------------------------------------------------------------------------------------
Version: 0.3.4
Date: ????
  Bugfixes:
    - Removed a crash with processing autoplace
---------------------------------------------------------------------------------------------------
Version: 0.3.3
Date: 2024-06-12
  Minor Features:
    - Added compatibility for SimpleSeablock. Stone and Coal still are base resources due to rocks still getting autoplaced, but that's not easy to fix.
  Bugfixes:
    - No longer considers resources disabled during map creation as available
---------------------------------------------------------------------------------------------------
Version: 0.3.2
Date: 2024-06-05
  Minor Features:
    - PyAE's Guano problem is mostly fixed
  Changes:
    - Added ability to inject recipes from within compatibility configs
---------------------------------------------------------------------------------------------------
Version: 0.3.1
Date: 2024-06-04
  Locale:
    - Added Ukranian translations (crowdin)
    - Started translations for other languages (crowdin)
  Features:
    - Compatibility can now disable considering technology
    - Can now use a localized string instead of raw mod name
  Minor Features:
    - Added compatibility for Py Alternative Energy
    - Added general compatibility for all of Pyanodons (probably)
  Bugfixes:
    - Fixed a possible desync for on_load
    - A mineable resource that has no results now doesn't crash
    - Stop adding C levels within the recursion (stack overflow). Does mean it's less resistant to errors during calculation, but they should hopefully be tested out of existence before release.
    - Stopped a second extra row being added when putting an item into the final slot of the 2nd to last row
---------------------------------------------------------------------------------------------------
Version: 0.3.0
Date: 2024-05-31
  Major Features: