@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.4
 Date: ????
+  Minor Features:
+    - Added compatibility for Nullius
   Bugfixes:
     - Removed a crash with processing autoplace
 ---------------------------------------------------------------------------------------------------
